# crispy-tailwind

./: .buildinfo  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  LICENSE.txt  MANIFEST.in  README.md  README.rst  RELEASE.md  contributing.html  custom.html  examples.html  genindex.html  getting_started.html  index.html  layout_objects.html  objects.inv  pyproject.toml  pyprojecttoml  requirements.html  requirements.txt  search.html  searchindex.js  setup.cfg  setup.py  tox.ini
.github/workflows/: CI.yml  build_docs.yml  docs.yml  lint.yml  publish.yml
_sources/: contributing.txt  index.txt  layout_objects.txt
_static/: documentation_options.js
crispy_tailwind/: layout.py  tailwind.py
crispy_tailwind/templates/tailwind/: errors.html  errors_formset.html  field.html  table_inline_formset.html
crispy_tailwind/templates/tailwind/layout/: alert.html  baseinput.html  checkboxselectmultiple.html  checkboxselectmultiple_inline.html  column.html  div.html  field_errors.html  field_with_buttons.html  fieldset.html  help_text.html  inline_field.html  prepended_appended_text.html  radioselect.html  radioselect_inline.html  row.html  select.html  select_option.html
crispy_tailwind/templatetags/: tailwind_field.py  tailwind_filters.py
docs/: conf.py  contributing.txt  custom.txt  examples.txt  faq.txt  getting_started.txt  index.txt  layout_objects.txt  requirements.txt
tests/: forms.py  test_alert.py  test_crispy_addon.py  test_filter.py  test_helper.py  test_prepended_appended.py  test_settings.py  test_table_inline_formset.py  test_tailwind.py  utils.py
tests/results/alert/: alert.html  alert_custom.html  alert_dismiss_false.html
tests/results/crispy_addon/: crispy_addon.html
tests/results/filter/: crispy_filter.html  crispy_filter_lt50.html  formset.html
tests/results/helper/: buttons.html  buttons_with_css.html  charfield.html  charfield_failing.html  charfield_failing_lt50.html  col_row.html  col_row_lt50.html  crispy_layout.html  div.html  div_lt50.html  field_with_buttons.html  fieldset.html  fieldset_lt50.html  formset.html  formset_errors.html  formset_errors_lt50.html  formset_form_tag.html  formset_form_tag_lt50.html  formset_lt50.html  inline_checkbox.html  inline_field.html  inline_radio.html  multiple_checkbox.html  non_form_errors.html  non_form_errors_lt50.html  password.html  radio.html  select.html
tests/results/prepended/: appended_errors.html  appended_errors_lt50.html  appended_text.html  prepended_appended_errors.html  prepended_appended_errors_lt50.html  prepended_appended_text.html  prepended_errors.html  prepended_errors_lt50.html  prepended_help.html  prepended_help_lt50.html  prepended_long_text.html  prepended_no_label.html  prepended_text.html
tests/results/table_inline_formset/: table_inline_formset.html  table_inline_formset_failing.html  table_inline_formset_lt50.html
