[metadata]
license-file = LICENSE.txt

[bdist_wheel]
universal=1

[isort]
multi_line_output=3
include_trailing_comma=True
force_grid_wrap=0
use_parentheses=True
line_length=119
default_section=THIRDPARTY
known_django=django
known_first_party=crispy_forms
sections=FUTURE,STDLIB,THIRDPARTY,DJANGO,FIRSTPARTY,LOCALFOLDER

[coverage:run]
branch = True

[flake8]
exclude =
# mirrors max-line-length of Django. This is shorter than GitHub editor (127)
max-line-length = 119
statistics = True
max-complexity = 10
count = True
select = C,E,F,W,B
ignore = E203, W503
